// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Quiz Reveal renders correctly 1`] = `
<jest>
  <div
    class="ecl-quiz ecl-quiz--reveal"
    data-ecl-auto-init="Quiz"
  >
    <div
      class="ecl-quiz__header"
    >
      <div
        class="ecl-quiz__title"
      >
        Ut enim ad minim veniam 
      </div>
      <div
        class="ecl-quiz__description"
      >
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
    Excepteur sint occaecat cupidatat non proident, sunt.
      </div>
    </div>
    <div
      class="ecl-quiz__viewport"
      data-ecl-quiz-slider=""
    >
      <div
        class="ecl-quiz__list"
      >
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                When you travel in the EU, what happens to yor roaming charges?
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                You usually pay the same at home, no extra roaming fees.
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                What document allows EU citizens to travel freely between most EU countries?
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                A valid ID card or passport is usually enough.
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                What currency is used in many EU countries?
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                The euro (€) is used in many EU member states.
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                Duis id mattis libero. Quisque accumsan nisi in nisl ultrices dictum
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                Nam lorem eros, auctor at feugiat id, efficitur non velit. Nam ac arcu vitae eros dapibus cursus vel eget lectus.
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                Aenean est metus, malesuada sed suscipit id, tempor non sapien. Donec viverra, odio id venenatis sollicitudin
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ecl-quiz__pager"
    >
      <button
        class="ecl-quiz__prev"
      >
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-270 ecl-icon--corner-arrow"
        />
        <span
          class="ecl-quiz__prev-label"
        >
          
        Previous
      
        </span>
      </button>
      <div
        class="ecl-quiz__dots"
      />
      <button
        class="ecl-quiz__next"
      >
        <span
          class="ecl-quiz__next-label"
        >
          
        Next
      
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--corner-arrow"
        />
      </button>
      <script
        id="ecl-quiz__dot-template"
        type="text/template"
      >
        &lt;button class="ecl-quiz__dot"&gt;&lt;/button&gt;
      </script>
    </div>
    <div
      class="ecl-quiz__counter"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="ecl-quiz__live-region"
    />
  </div>
</jest>
`;

exports[`Quiz Reveal renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-quiz ecl-quiz--reveal"
    data-ecl-auto-init="Quiz"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-quiz__header"
    >
      <div
        class="ecl-quiz__title"
      >
        Ut enim ad minim veniam 
      </div>
      <div
        class="ecl-quiz__description"
      >
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
    Excepteur sint occaecat cupidatat non proident, sunt.
      </div>
    </div>
    <div
      class="ecl-quiz__viewport"
      data-ecl-quiz-slider=""
    >
      <div
        class="ecl-quiz__list"
      >
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                When you travel in the EU, what happens to yor roaming charges?
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                You usually pay the same at home, no extra roaming fees.
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                What document allows EU citizens to travel freely between most EU countries?
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                A valid ID card or passport is usually enough.
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                What currency is used in many EU countries?
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                The euro (€) is used in many EU member states.
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                Duis id mattis libero. Quisque accumsan nisi in nisl ultrices dictum
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                Nam lorem eros, auctor at feugiat id, efficitur non velit. Nam ac arcu vitae eros dapibus cursus vel eget lectus.
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                Aenean est metus, malesuada sed suscipit id, tempor non sapien. Donec viverra, odio id venenatis sollicitudin
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ecl-quiz__pager"
    >
      <button
        class="ecl-quiz__prev"
      >
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-270 ecl-icon--corner-arrow"
          data-test="data-test-value"
          data-test-1="data-test-value-1"
        />
        <span
          class="ecl-quiz__prev-label"
        >
          
        Previous
      
        </span>
      </button>
      <div
        class="ecl-quiz__dots"
      />
      <button
        class="ecl-quiz__next"
      >
        <span
          class="ecl-quiz__next-label"
        >
          
        Next
      
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--corner-arrow"
          data-test="data-test-value"
          data-test-1="data-test-value-1"
        />
      </button>
      <script
        id="ecl-quiz__dot-template"
        type="text/template"
      >
        &lt;button class="ecl-quiz__dot"&gt;&lt;/button&gt;
      </script>
    </div>
    <div
      class="ecl-quiz__counter"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="ecl-quiz__live-region"
    />
  </div>
</jest>
`;

exports[`Quiz Reveal renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-quiz ecl-quiz--reveal custom-class custom-class--test"
    data-ecl-auto-init="Quiz"
  >
    <div
      class="ecl-quiz__header"
    >
      <div
        class="ecl-quiz__title"
      >
        Ut enim ad minim veniam 
      </div>
      <div
        class="ecl-quiz__description"
      >
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
    Excepteur sint occaecat cupidatat non proident, sunt.
      </div>
    </div>
    <div
      class="ecl-quiz__viewport"
      data-ecl-quiz-slider=""
    >
      <div
        class="ecl-quiz__list"
      >
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                When you travel in the EU, what happens to yor roaming charges?
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                You usually pay the same at home, no extra roaming fees.
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                What document allows EU citizens to travel freely between most EU countries?
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                A valid ID card or passport is usually enough.
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                What currency is used in many EU countries?
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                The euro (€) is used in many EU member states.
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                Duis id mattis libero. Quisque accumsan nisi in nisl ultrices dictum
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="ecl-quiz-card"
        >
          <div
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__question"
              >
                Nam lorem eros, auctor at feugiat id, efficitur non velit. Nam ac arcu vitae eros dapibus cursus vel eget lectus.
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__icon"
              >
                <span
                  aria-hidden="true"
                  class="wt-icon--star-outline ecl-icon ecl-icon--xl ecl-icon--star-outline"
                />
              </div>
              <div
                class="ecl-quiz-card__answer"
              >
                Aenean est metus, malesuada sed suscipit id, tempor non sapien. Donec viverra, odio id venenatis sollicitudin
              </div>
              <button
                aria-expanded="false"
                class="ecl-quiz-card__flip"
                data-ecl-quiz-card-flip=""
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon--refresh ecl-icon ecl-icon--s ecl-icon--refresh"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ecl-quiz__pager"
    >
      <button
        class="ecl-quiz__prev"
      >
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-270 custom-class custom-class--test ecl-icon--corner-arrow"
        />
        <span
          class="ecl-quiz__prev-label"
        >
          
        Previous
      
        </span>
      </button>
      <div
        class="ecl-quiz__dots"
      />
      <button
        class="ecl-quiz__next"
      >
        <span
          class="ecl-quiz__next-label"
        >
          
        Next
      
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-90 custom-class custom-class--test ecl-icon--corner-arrow"
        />
      </button>
      <script
        id="ecl-quiz__dot-template"
        type="text/template"
      >
        &lt;button class="ecl-quiz__dot"&gt;&lt;/button&gt;
      </script>
    </div>
    <div
      class="ecl-quiz__counter"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="ecl-quiz__live-region"
    />
  </div>
</jest>
`;
